--- a/css/site.css
+++ b/css/site.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Zalando+Sans+Expanded:ital,wght@0,200..900;1,200..900&display=swap');
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: "IBM Plex Sans", sans-serif;
     font-weight: 400;
