--- a/css/site.css
+++ b/css/site.css
@@ -7,7 +7,7 @@ html {
 body {
     font-family: "IBM Plex Sans", sans-serif;
     font-weight: 400;
-    background: #1E152A;
+    background: rgb(30, 21, 42);
     color: #fff;
     margin-top: 60px;
     line-height: 1.2;
@@ -254,17 +254,21 @@ footer#site-footer .socials {
 .banner.takeover.home-feature {
     min-height: calc(50vh - 60px);
     height: calc(50vh - 60px);
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 .home-feature:before {
     content:'';
     display: block;
-    width: 50%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
+    width: 2000px;
+    height: 2000px;
+    border-radius: 1000px;
+    position: fixed;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    left: 50%;
     background: #FFB70D;
     background: -webkit-linear-gradient(45deg, #ffb70d 0%, rgba(255, 153, 13, 1) 100%);
     background: -moz-linear-gradient(45deg, rgba(255, 183, 13, 1) 0%, rgba(255, 153, 13, 1) 100%);
@@ -347,6 +351,7 @@ footer#site-footer .socials {
 .banner.takeover.about-feature {
     min-height: calc(50vh - 60px);
     height: calc(50vh - 60px);
+    background: rgba(30,21,42,0.9);
 }
 
 .about-feature h1 {
@@ -405,6 +410,7 @@ footer#site-footer .socials {
 
 .services-feature {
     padding: 80px 20px;
+    background: rgba(30,21,42,0.9);
 }
 .services-feature .component-inner {
     display: flex;
@@ -450,6 +456,7 @@ footer#site-footer .socials {
 .contact-form {
     padding: 80px 20px;
     color: #1E152A;
+    background: rgba(30,21,42,0.9);
 }
     .contact-form:before {
         content:'';
@@ -460,7 +467,7 @@ footer#site-footer .socials {
         right: 0;
         bottom: 0;
         left: 0;
-        background-color: #110c18;
+        background-color: rgba(17,12,24,0.9);
     }
     .contact-form .form-container {
         background: #ffffff;
