--- a/css/site.css
+++ b/css/site.css
@@ -532,6 +532,25 @@ footer#site-footer .socials {
     .contact-form .form-container {
         padding: 50px;
     }
-    
-        
 }
+
+/* About Page */
+.about-timeline .timeline-wrapper {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+}
+    .about-timeline .timeline-wrapper .item {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: flex-end;
+    }
+        .about-timeline .timeline-wrapper .item .year {
+            width: 100px;
+            padding: 5px;
+        }
+        .about-timeline .timeline-wrapper .item .milestone {
+            width: calc(100% - 100px);
+            padding: 5px;
+        }
