--- a/css/site.css
+++ b/css/site.css
@@ -535,3 +535,6 @@ footer#site-footer .socials {
 }
 
 /* About Page */
+ul.timeline-wrapper li, ul.timeline-wrapper li ul {
+    padding-left: 20px;
+}
