fixed broken ul structure, changed padding on UL to margin

--- a/css/site.css
+++ b/css/site.css
@@ -536,5 +536,5 @@ footer#site-footer .socials {
 
 /* About Page */
 ul.timeline-wrapper li, ul.timeline-wrapper li ul {
-    padding-left: 20px;
+    margin-left: 20px;
 }
