pseudo element for years in timeline of about page

--- a/css/site.css
+++ b/css/site.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Zalando+Sans+Expanded:ital,wght@0,200..900;1,200..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Zalando+Sans+Expanded:ital,wght@0,200..900;1,200..900&display=swap');
 
 html {
     scroll-behavior: smooth;
@@ -535,6 +535,42 @@ footer#site-footer .socials {
 }
 
 /* About Page */
+.about-timeline ul {
+    list-style: none;
+}
 ul.timeline-wrapper li, ul.timeline-wrapper li ul {
     margin-left: 20px;
+}
+ul.timeline-wrapper > li:before {
+    content:'';
+    display: block;
+    font-family: "IBM Plex Mono", monospace;
+    font-weight: 700;
+}
+.ul.timeline-wrapper > li:nth-of-type(1) {
+    content:'90';
+}
+.ul.timeline-wrapper > li:nth-of-type(2) {
+    content:'08';
+}
+.ul.timeline-wrapper > li:nth-of-type(3) {
+    content:'14';
+}
+.ul.timeline-wrapper > li:nth-of-type(4) {
+    content:'14';
+}
+.ul.timeline-wrapper > li:nth-of-type(5) {
+    content:'16';
+}
+.ul.timeline-wrapper > li:nth-of-type(6) {
+    content:'23';
+}
+.ul.timeline-wrapper > li:nth-of-type(7) {
+    content:'24';
+}
+.ul.timeline-wrapper > li:nth-of-type(8) {
+    content:'25';
+}
+.ul.timeline-wrapper > li:nth-of-type(9) {
+    content:'26';
 }
