--- a/css/site.css
+++ b/css/site.css
@@ -547,30 +547,30 @@ ul.timeline-wrapper > li:before {
     font-family: "IBM Plex Mono", monospace;
     font-weight: 700;
 }
-.ul.timeline-wrapper > li:nth-of-type(1):before {
+ul.timeline-wrapper > li:nth-of-type(1):before {
     content:'90';
 }
-.ul.timeline-wrapper > li:nth-of-type(2):before {
+ul.timeline-wrapper > li:nth-of-type(2):before {
     content:'08';
 }
-.ul.timeline-wrapper > li:nth-of-type(3):before {
+ul.timeline-wrapper > li:nth-of-type(3):before {
     content:'14';
 }
-.ul.timeline-wrapper > li:nth-of-type(4):before {
+ul.timeline-wrapper > li:nth-of-type(4):before {
     content:'14';
 }
-.ul.timeline-wrapper > li:nth-of-type(5):before {
+ul.timeline-wrapper > li:nth-of-type(5):before {
     content:'16';
 }
-.ul.timeline-wrapper > li:nth-of-type(6):before {
+ul.timeline-wrapper > li:nth-of-type(6):before {
     content:'23';
 }
-.ul.timeline-wrapper > li:nth-of-type(7):before {
+ul.timeline-wrapper > li:nth-of-type(7):before {
     content:'24';
 }
-.ul.timeline-wrapper > li:nth-of-type(8):before {
+ul.timeline-wrapper > li:nth-of-type(8):before {
     content:'25';
 }
-.ul.timeline-wrapper > li:nth-of-type(9):before {
+ul.timeline-wrapper > li:nth-of-type(9):before {
     content:'26';
 }
