--- a/css/site.css
+++ b/css/site.css
@@ -538,13 +538,16 @@ footer#site-footer .socials {
 .about-timeline ul {
     list-style: none;
 }
+.about-timeline sup {
+    font-size: 25px;
+}
 ul.timeline-wrapper li ul {
     margin-left: 75px;
 }
 ul.timeline-wrapper {
     font-family: "Zalando Sans Expanded", sans-serif;
     font-weight: 900;
-    font-size: 60px;
+    font-size: 50px;
     text-transform: uppercase;
 }
     ul.timeline-wrapper > li > ul {
