--- a/css/site.css
+++ b/css/site.css
@@ -251,6 +251,24 @@ footer#site-footer .socials {
     }
 }
 
+/* Interior Title Banners */
+.title-banner {
+    padding: 100px 20px;
+    text-align: center;
+}
+    .title-banner .secondary-heading {
+        font-family: "Zalando Sans Expanded", sans-serif;
+        font-size: 24px;
+        text-transform: uppercase;
+        font-weight: 900;
+        margin-bottom: 20px;
+    }
+    .title-banner h1 {
+        font-family: "IBM Plex Sans", sans-serif;
+        font-weight: 300;
+        font-size: 48px;
+    }
+
 .banner.takeover.home-feature {
     min-height: calc(50vh - 60px);
     height: calc(50vh - 60px);
@@ -258,7 +276,7 @@ footer#site-footer .socials {
     overflow-y: scroll;
 }
 
-.home-feature:before {
+.home-feature:before, .title-banner:before {
     content:'';
     display: block;
     width: 2000px;
