--- a/css/site.css
+++ b/css/site.css
@@ -579,7 +579,7 @@ footer#site-footer .socials {
 
 /* About Page */
 .about-timeline {
-    padding: 80px;
+    padding: 80px 0;
 }
 .about-timeline ul {
     list-style: none;
